Now the bots can quit after a certain amount of time since the last member of the channel left, to save resources. Default is 60 seconds Removed old code